took out the border-radius for the image. fixed spacing for the grid for desc. Added the vertical line in the media query. Added css for more of the media query.

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -48,18 +48,33 @@ hr {
 .book img {
     max-width: 35%;
     display: block;
-    border-radius: 8px;
     margin: 0 auto;
 }
 #desc {
-    grid-column: 1/3;
+    grid-column: 1 / 3;
     margin: 20px 100px;
 }
 footer {
     text-align: center;
 }
 @media (min-width: 600px) {
+    .book {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        max-width: 1000px;
+    }
     .book-data {
         justify-content: left;
+    }
+    .book-right {
+        border-left: 1px solid #ffc107;
+    }
+    h2, #desc {
+        text-align: left;
+        margin: 20px 50px;
+    } 
+    .book img {
+        max-width: 100%;
+        justify-content: center;
     }
 }
